// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render a card > expected html 1`] = `
<div>
  <div
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h2
        class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700 hover:underline-offset-4"
      >
        Card Title
      </h2>
      <div
        class="text-sm text-black/60"
      >
        Test Card
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render a card with a link > expected html 1`] = `
<div>
  <a
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
    data-discover="true"
    href="/fr"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h2
        class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700 hover:underline-offset-4"
      >
        Card Title
      </h2>
      <div
        class="text-sm text-black/60"
      >
        Test Card
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > should render a card with a link with an icon > expected html 1`] = `
<div>
  <div
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
  >
    <div
      class="flex items-center gap-4 p-6"
    >
      <span
        class="flex size-10 shrink-0 items-center justify-center rounded-full bg-blue-100 sm:size-12"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user size-4 text-blue-600 sm:size-5"
          data-icon="user"
          data-prefix="fas"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        class="flex flex-col space-y-1.5 p-0"
      >
        <h2
          class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700 hover:underline-offset-4"
        >
          Card Title
        </h2>
        <div
          class="text-sm text-black/60"
        >
          Test Card
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render a card with a link with an icon, content, footer with button and heading2 > expected html 1`] = `
<div>
  <div
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
  >
    <div
      class="flex items-center gap-4 p-6"
    >
      <span
        class="flex size-10 shrink-0 items-center justify-center rounded-full bg-blue-100 sm:size-12"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user size-4 text-blue-600 sm:size-5"
          data-icon="user"
          data-prefix="fas"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        class="flex flex-col space-y-1.5 p-0"
      >
        <h2
          class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700 hover:underline-offset-4"
        >
          Card Title
        </h2>
        <div
          class="text-sm text-black/60"
        >
          Test Card
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-3"
    >
      <p>
        Card content part 1
      </p>
      <p>
        Card content part 2
      </p>
    </div>
    <div
      class="p-6 pt-0"
    >
      <button
        class="font-lato inline-flex items-center justify-center rounded border align-middle outline-offset-4 px-5 py-2.5 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
      >
        Click me
      </button>
    </div>
  </div>
</div>
`;

exports[`Card > should render a card with a link with an image > expected html 1`] = `
<div>
  <a
    class="group block rounded-xs border bg-white shadow-xs [&:is(a)]:hover:bg-gray-50 [&:is(a)]:hover:shadow-md"
    data-discover="true"
    href="/fr"
  >
    <img
      alt=""
      class="relative aspect-video h-40 w-full object-cover sm:h-48"
      draggable="false"
      loading="lazy"
      src="https://www.canada.ca/content/dam/canada/activities/20250115-1-520x200.jpg"
    />
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h2
        class="leading-none font-semibold group-[&:is(a)]:text-slate-700 group-[&:is(a)]:underline group-[&:is(a):focus]:text-blue-700 group-[&:is(a):hover]:text-blue-700 hover:underline-offset-4"
      >
        Card Title
      </h2>
      <div
        class="text-sm text-black/60"
      >
        Test Card
      </div>
    </div>
    <div
      class="p-6 pt-0"
    >
      <span
        class="inline-block bg-cyan-700 px-2 py-1 text-xs text-white"
      >
        Coming soon
      </span>
    </div>
  </a>
</div>
`;
